More work on the backing store

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ bincode = "1.1.4"
 clap = "2.33.0"
 itertools = "0.8"
 skiplist = "0.2.10"
+byteorder = "1.3.1"
 
 [dev-dependencies]
 simulacrum = "0.3.1"
