--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ clap = "2.33.0"
 itertools = "0.8"
 skiplist = "0.2.10"
 byteorder = "1.3.1"
+crc = "^1.0.0"
 
 [dev-dependencies]
 simulacrum = "0.3.1"
