Update build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ rust:
   - stable
 cache: cargo
 script:
-  - cargo build --verbose all
-  - cargo test --lib
+  - cargo build --verbose
+  - cargo test --lib --verbose
