--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,12 @@ bincode = "1.3.3"
 byteorder = "1.4.3"
 crc = "^2.0.0"
 directories = "3.0"
+ubyte = "0.10"
 
 # cli
 clap = "3.0.0-beta.2"
 termion = "1.5.6"
+config = "0.11.0"
 
 # repl
 rustyline = "8.0.0"
