--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ directories = "3.0"
 ubyte = "0.10"
 
 # cli
-clap = "3.0.0-beta.2"
+clap = {version = "3.2.6", features = ["derive"]}
 termion = "1.5.6"
 config = "0.11.0"
 
